<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HorarioFixActivity">

    
    <TimePicker
        android:id="@+id/id_clock_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <LinearLayout
        android:id="@+id/days_of_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_clock_schedule"
        >

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:layout_width="0dp"
            android:gravity="center_horizontal">
            <ToggleButton
                android:id="@+id/sunday_day"
                style="@style/Days"
                android:background="@drawable/toggle_button_background"
                android:textOn="@string/sunday"
                android:textOff="@string/sunday"/>
            <ToggleButton
                android:id="@+id/monday_day"
                style="@style/Days"
                android:background="@drawable/toggle_button_background"
                android:stateListAnimator="@null"
                android:textOn="@string/monday"
                android:textOff="@string/monday"/>
            <ToggleButton
                android:id="@+id/tuesday_day"
                style="@style/Days"
                android:background="@drawable/toggle_button_background"
                android:stateListAnimator="@null"
                android:textOn="@string/tuesday"
                android:textOff="@string/tuesday"/>
            <ToggleButton
                android:id="@+id/wednesday_day"
                style="@style/Days"
                android:background="@drawable/toggle_button_background"
                android:stateListAnimator="@null"
                android:textOn="@string/wednesday"
                android:textOff="@string/wednesday"/>
            <ToggleButton
                android:id="@+id/thursday_day"
                style="@style/Days"
                android:background="@drawable/toggle_button_background"
                android:stateListAnimator="@null"
                android:textOn="@string/thursday"
                android:textOff="@string/thursday"/>
            <ToggleButton
                android:id="@+id/friday_day"
                style="@style/Days"
                android:background="@drawable/toggle_button_background"
                android:stateListAnimator="@null"
                android:textOn="@string/friday"
                android:textOff="@string/friday"/>
            <ToggleButton
                android:id="@+id/saturday_day"
                style="@style/Days"
                android:background="@drawable/toggle_button_background"
                android:stateListAnimator="@null"
                android:textOn="@string/saturday"
                android:textOff="@string/saturday"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:layout_width="0dp"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/back_button_register_medicine"
                style="@style/MainButton"
                android:background="@drawable/custom_button_login_register"
                android:stateListAnimator="@null"
                android:text="@string/back_button_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:layout_width="0dp"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/next_button_register_medicine"
                style="@style/MainButton"
                android:background="@drawable/custom_button_login_register"
                android:stateListAnimator="@null"
                android:text="@string/button_confirm_clock_interval"/>
        </LinearLayout>

    </LinearLayout>



    
</androidx.constraintlayout.widget.ConstraintLayout>