<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastrarAlarmeActivity">


    <TextView
        android:id="@+id/info_text_medicine"
        style="@style/MainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/informar_dados_remedio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/name_inf_medicine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="35dp"
            android:drawablePadding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_text_medicine"
            android:drawableStart="@drawable/ic_pills"
            android:hint="@string/medicine_name"
            android:inputType="text" />


        <EditText
            android:id="@+id/inf_dosage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="35dp"
            android:drawablePadding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_inf_medicine"
            android:drawableStart="@drawable/ic_dosage"
            android:hint="@string/dosage"
            android:inputType="number" />


        <EditText
            android:id="@+id/inf_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="35dp"
            android:drawablePadding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inf_dosage"
            android:drawableStart="@drawable/ic_quantity"
            android:hint="@string/quantity"
            android:inputType="number" />

    <LinearLayout
        android:id="@+id/radio_buttons_register_medicine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inf_quantity">

        <TextView
            style="@style/CadastroText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/time" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_button_register_medicine_interval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:text="@string/action_button_interval" />

            <RadioButton
                android:id="@+id/radio_button_register_medicine_fixtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/action_button_fix_time" />
        </RadioGroup>

    </LinearLayout>


    <Button
        android:id="@+id/back_button_register_medicine"
        style="@style/MainButton"
        android:background="@drawable/button_background"
        android:layout_marginTop="50dp"
        android:text="@string/back_button_text"
        app:layout_constraintEnd_toStartOf="@id/next_button_register_medicine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_buttons_register_medicine" />

    <Button
        android:id="@+id/next_button_register_medicine"
        style="@style/MainButton"
        android:background="@drawable/button_background"
        android:layout_marginTop="50dp"
        android:text="@string/next_register_alarm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/back_button_register_medicine"
        app:layout_constraintTop_toBottomOf="@id/radio_buttons_register_medicine"
        />




</androidx.constraintlayout.widget.ConstraintLayout>