<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/info_text_view"
            style="@style/MainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/info_cadatro_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/nome_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="35dp"
            android:autofillHints=""
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_text_view"
            tools:ignore="LabelFor"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_account_circle_black_24dp"
            android:hint="@string/nome_cadastro_text"/>


        <EditText
            android:id="@+id/senha_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="35dp"
            android:autofillHints=""
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nome_layout"
            tools:ignore="LabelFor"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_lock_outline_black_24dp"
            android:hint="@string/senha_cadastro_text"/>

        <EditText
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="35dp"
            android:autofillHints=""
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/senha_layout"
            android:hint="@string/email_cadastro_text"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_email_black_24dp"
            tools:ignore="LabelFor" />


        <EditText
            android:id="@+id/celular_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="35dp"
            android:autofillHints=""
            android:inputType="phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_layout"
            tools:ignore="LabelFor"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_local_phone_black_24dp"
            android:hint="@string/telefone_cadastro_text"/>

        <LinearLayout
            android:id="@+id/radio_buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/celular_layout">

            <TextView
                style="@style/CadastroText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/opcoes_cadastro_text" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_button_idoso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/radio_button_idoso_text" />

                <RadioButton
                    android:id="@+id/radio_button_cuidador"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/radio_button_cuidador_text" />
            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/back_button"
            style="@style/MainButton"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_background"
            android:text="@string/back_button_text"
            app:layout_constraintEnd_toStartOf="@id/sign_in_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_buttons_layout" />

        <Button
            android:id="@+id/sign_in_button"
            style="@style/MainButton"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_background"
            android:text="@string/sign_in_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/back_button"
            app:layout_constraintTop_toBottomOf="@id/radio_buttons_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
