<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntervaloHorarioActivity">

    <TextView
        android:id="@+id/info_text_medicine"
        style="@style/MainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/informar_dados_remedio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/buttons_layout_interval_clock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_weight="50"
        android:layout_width="0dp"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/back_button_interval_clock"
            style="@style/MainButton"
            android:background="@drawable/custom_button_login_register"
            android:stateListAnimator="@null"
            android:text="@string/button_back_clock_interval"/>
    </LinearLayout>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:layout_width="0dp"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/next_button_interval_clock"
                style="@style/MainButton"
                android:background="@drawable/custom_button_login_register"
                android:stateListAnimator="@null"
                android:text="@string/next_register_alarm"/>
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/start_time_interval_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="35dp"
        android:drawablePadding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_text_medicine"
        android:drawableStart="@drawable/ic_time_and_date"
        android:hint="@string/start_time_clock_interval"
        android:inputType="time"
        style="@style/EditTextStyle"/>

    <EditText
        android:id="@+id/how_many_times_interval_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:drawablePadding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_time_interval_text"
        android:drawableStart="@drawable/ic_time"
        android:hint="@string/how_many_times"
        android:inputType="number"
        style="@style/EditTextStyle"/>

    <EditText
        android:id="@+id/time_interval_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:drawablePadding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/how_many_times_interval_text"
        android:drawableStart="@drawable/ic_time_and_date_time"
        android:hint="@string/time_clock_interval"
        android:inputType="number"
        style="@style/EditTextStyle"/>

</androidx.constraintlayout.widget.ConstraintLayout>